src/styles/_base.scss
@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
@font-face {
  font-family:"Chicago";
  src:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2989272/chikarego2-webfont.ed446049.woff2) format("woff2"),
    url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2989272/chikarego2-webfont.bfc0d735.woff) format("woff");
  font-weight: 400;
  font-style: normal;
}


.container#content {
  display: inherit;
  margin-bottom: 50px;
  margin-top: 30px;
}
body {
  background-color: $light-gray;
  font-family: $site-font;
  cursor: url(../images/cursor.svg) 3 0,auto!important;
  background-image: url(../images/bg.svg)!important;
  background-color: blueviolet;
}

a {
  cursor: url(../images/click.svg) 3 0,auto!important;
  text-decoration: none;
}

a:hover {
  color: #ff0095 !important;
}
.popover-txt {
  color: #220036;
  &:hover {
    color: #ff0095;
    text-decoration: none;
    font-weight: bold;
}
}

h1 {
  font-family: "Fredoka One",cursive;
  font-size: 42px;
  color: #fffb0e;
  -webkit-text-stroke: 2px #020102;
  text-align: center;
}

.icon {
  width: 100px;
  position: relative;
  margin: 0 auto;
  display: block;
}

.nav-bar {
  display: inline-block;

  width: 90px;
  height: 100vh;
  text-align: center;
  font-family:"Chicago";
  position: fixed;
}

// .navbar {
//   background-color: white;
//   // border-right: 1px solid rgba(0, 0, 0, 0.4);
//   // border-left: 1px solid rgba(0, 0, 0, 0.4);
//   border-bottom: 1px solid rgba(0, 0, 0, 0.4);
//   line-height: 1;
// }
// .navbar-light .navbar-nav .nav-link,
// .navbar-light .navbar-brand {
//   color: #0056b3;
//   &:hover {
//     color: #007bff;
//   }
// }
ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.nav-link {
  font-size: 17px;
  cursor: url(../images/click.svg) 3 0,auto!important;
  color: #000;
  span {
    background-color: rgb(255, 255, 255);
    opacity: 90%;
  }
  
  
}

.nav-link span {
  &:hover {
    border: 1px dotted #000;
    background: rgb(251, 255, 0);
    color: #000;
    opacity: 100%;
}
}

// .buttonFalse {
//   background-color: rgb(220, 148, 253);
//   border: 1px dotted rgb(255, 244, 244);
//   color: #020102;
// }

// .buttonTrue {
//   background-color: rgb(255, 255, 255);
//   opacity: 70%;
// }

@media only screen and (max-device-width: 640px) {
  .nav-bar {
    margin: 0;
    height: 90px;
    width: 100vw;
    bottom: 20px;
    display: flex;
    align-items: center;
}
.container#content {
    width: 100vw;
    height: calc(100vh - 90px)!important;
}

.window-2 {
  width: auto;
  left: auto;
}
.card-title h2 {
  font-size: 25px;
}
.card-text {
  margin: 12px;
  font-size: 14px;
}
}

